source/style/03-dialog-with-bot.css
.chat-window__history {
	display: flex;
	flex-direction: column-reverse;
	margin-bottom: .5em;
	overflow: hidden;
	padding: 1em 1em 0 0;
}

.chat-window__history:hover {
	-moz-overflow-scrolling: touch;
	-ms-overflow-scrolling: touch;
	-o-overflow-scrolling: touch;
	-webkit-overflow-scrolling: touch;
	overflow-x: hidden;
	overflow-y: scroll;
	padding-right: .55em;
}

.chat-window__history::-webkit-scrollbar {
	-webkit-appearance: none;
	width: 7px;
}

.chat-window__history::-webkit-scrollbar-thumb {
	background-color: #fff;
	border-radius: 8px;
}

.message {
	display: flex;
	margin: 1.5em 0;
}

.message__avatar {
	border-radius: 50px;
	height: 5em;
	max-height: 5em;
	min-width: 5em;
}

.message__avatar_user {
	background: center / cover no-repeat url(../img/user-avatar.svg);
}

.message__avatar_bot {
	background: center / cover no-repeat url(../img/bot-avatar.svg);
}

.message__buble {
	border-radius: 32px;
	color: #282828;
	font: normal normal 1em/1 "roboto";
	height: fit-content;
	margin-left: 2em;
	max-width: 27em;
	padding: 1em 2em;
	word-wrap: break-word;
}

.message__buble_user {
	background: #F9C35B;
}

.message__buble_bot {
	background: #F1F0F0;
}

.message__buble_user_has-tail {
  border-radius: 50px 50px 50px 0;
  position: relative;
}

.message__buble_user_has-tail::before {
  border-bottom: 8px solid #F9C35B;
  border-left: 16px solid transparent;
  border-right: 0px solid transparent;
  bottom: 0;
  content: '';
  height: 0;
  left: -16px;
  position: absolute;
  width: 0;
}

